--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: fultter_paypal_sdk
+name: flutter_paypal_sdk
 description: PayPal SDK for facilitating integration with PayPal REST APIs
 homepage: https://github.com/EBaglieriSkylabs/flutter_paypal_sdk
 version: 1.0.8
