--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,12 @@ environment:
   sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
+  flutter:
+    sdk: flutter
   json_annotation: ^4.8.1
   http: ^1.0.0
   logging: ^1.2.0
+  flutter_inappwebview: ^5.8.0
 
 dev_dependencies:
   lints: ^2.1.1
